k8s/my-redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-redis
  labels:
    component: web
spec:
  containers:
  - name: my-redis
    image: redis:alpine
    ports:
      - containerPort: 6379
